--- a/recorder/index.html
+++ b/recorder/index.html
@@ -11,6 +11,8 @@
     <body>
         <button id="record">Record</button>
         <button id="stop">Stop</button>
+        <input type="text" id="eventSlug" placeholder="Event Slug">
+        <video id="video" width="320" height="240" autoplay controls playsinline muted></video>
         <script src="/web/script.js"></script>
     </body>
 </html>
