--- a/recorder/index.html
+++ b/recorder/index.html
@@ -12,6 +12,7 @@
         <button id="record">Record</button>
         <button id="stop">Stop</button>
         <input type="text" id="eventSlug" placeholder="Event Slug">
+        <input type="range" step="0.1" id="zoom" placeholder="Zoom" value="1">
         <video id="video" width="320" height="240" autoplay controls playsinline muted></video>
         <script src="/web/script.js"></script>
     </body>
