--- a/recorder/index.html
+++ b/recorder/index.html
@@ -1,19 +1,28 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Media Recorder</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
-    </head>
-    <body>
-        <button id="record">Record</button>
-        <button id="stop">Stop</button>
-        <input type="text" id="eventSlug" placeholder="Event Slug">
-        <input type="range" step="0.1" id="zoom" placeholder="Zoom" value="1">
-        <video id="video" width="320" height="240" autoplay controls playsinline muted></video>
-        <script src="/web/script.js"></script>
-    </body>
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <title>Media Recorder</title>
+    <meta name="description" content="" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="" />
+  </head>
+  <body>
+    <button id="record">Record</button>
+    <button id="stop">Stop</button>
+    <input type="text" id="eventSlug" placeholder="Event Slug" />
+    <input type="range" step="0.1" id="zoom" placeholder="Zoom" value="1" />
+    <video
+      id="video"
+      width="320"
+      height="240"
+      autoplay
+      controls
+      playsinline
+      muted
+    ></video>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/RecordRTC/5.5.6/RecordRTC.js"></script>
+    <script src="/web/script.js"></script>
+  </body>
 </html>
